third try fixing vertical alignment through flex values in stat li, and added update counter at bottom

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2918,9 +2918,9 @@ input, select, textarea {
 	}
 
 		.statistics li {
-			-moz-flex: 1;
-			-webkit-flex: 1;
-			-ms-flex: 1;
+			-moz-flex: 0;
+			-webkit-flex: 0;
+			-ms-flex: 0;
 			flex: 1;
 			padding: 1.5em;
 			color: #ffffff;
@@ -3736,6 +3736,8 @@ input, select, textarea {
 		}
 
 /* Footer */
+
+		
 
 	#footer {
 		display: -moz-flex;
